--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           >
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a class="nav-list-link link" href="./index.html">Studio</a>
+              <a class="nav-list-link current link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link link" href="./portfolio.html"
@@ -78,7 +80,7 @@
             <li class="advantages-list-item">
               <div class="advantages-list-wrapper">
                 <svg class="advantages-list-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#antenna-icon"></use>
+                  <use href="./images/icons.svg#antenna-icon"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Strategy</h3>
@@ -90,7 +92,7 @@
             <li class="advantages-list-item">
               <div class="advantages-list-wrapper">
                 <svg class="advantages-list-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#clock-icon"></use>
+                  <use href="./images/icons.svg#clock-icon"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Punctuality</h3>
@@ -102,7 +104,7 @@
             <li class="advantages-list-item">
               <div class="advantages-list-wrapper">
                 <svg class="advantages-list-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#diagram-icon"></use>
+                  <use href="./images/icons.svg#diagram-icon"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Diligence</h3>
@@ -114,7 +116,7 @@
             <li class="advantages-list-item">
               <div class="advantages-list-wrapper">
                 <svg class="advantages-list-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#astronaut-icon"></use>
+                  <use href="./images/icons.svg#astronaut-icon"></use>
                 </svg>
               </div>
               <h3 class="advantages-title">Technologies</h3>
@@ -181,28 +183,28 @@
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -224,28 +226,28 @@
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -267,28 +269,28 @@
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -310,28 +312,28 @@
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-list-item">
                     <a class="team-socials-list-link link" href="">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -349,42 +351,42 @@
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#first-company"></use>
+                  <use href="./images/icons.svg#first-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#second-company"></use>
+                  <use href="./images/icons.svg#second-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#third-company"></use>
+                  <use href="./images/icons.svg#third-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#fourth-company"></use>
+                  <use href="./images/icons.svg#fourth-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#fifth-company"></use>
+                  <use href="./images/icons.svg#fifth-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="link customers-list-link" href="">
                 <svg class="customers-list-icon" width="104" height="56">
-                  <use href="./images/icons/icons.svg#six-company"></use>
+                  <use href="./images/icons.svg#six-company"></use>
                 </svg>
               </a>
             </li>
@@ -395,41 +397,43 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="link logo footer-logo" href="./index.html"
-          >Web<span class="accent-logo-footer">Studio</span></a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-wrapper">
+          <a class="link logo footer-logo" href="./index.html"
+            >Web<span class="accent-logo-footer">Studio</span></a
+          >
+          <p class="footer-desc">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="social-media-wrapper">
           <p class="social-media-desc">Social media</p>
-          <ul class="list">
+          <ul class="list team-socials-list-footer">
             <li class="team-socials-list-item">
               <a class="team-socials-list-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#instagram"></use>
+                  <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
               <a class="team-socials-list-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#twitter"></use>
+                  <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
               <a class="team-socials-list-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#facebook"></use>
+                  <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
               <a class="team-socials-list-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#linkedin"></use>
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
