--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               <a class="nav-list-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-link link" href="./portfolio.html"
+              <a class="nav-list-link current link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -86,12 +86,21 @@
           <ul class="list products-list">
             <li class="products-list-item">
               <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card1.jpg"
-                  alt="design app"
-                  width="360"
-                  height="300"
-                />
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card1.jpg"
+                    alt="design app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                      <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task
+                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                        App · Cloud Storage App
+                      </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">
                     Banking App Interface Concept
@@ -101,13 +110,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card2.jpg"
-                  alt="scan qr"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card2.jpg"
+                    alt="scan qr"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Cashless Payment</h2>
                   <p class="products-list-desc">Marketing</p>
@@ -115,27 +133,45 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card3.jpg"
-                  alt="adaptation app"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card3.jpg"
+                    alt="adaptation app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Meditation App</h2>
                   <p class="products-list-desc">App</p>
                 </div>
               </a>
-            </li>
+            <a href="" class="products-list-link"></li></a>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card4.jpg"
-                  alt="taxi app"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card4.jpg"
+                    alt="taxi app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Taxi Service</h2>
                   <p class="products-list-desc">Marketing</p>
@@ -143,13 +179,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card5.jpg"
-                  alt="desing phone"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card5.jpg"
+                    alt="desing phone"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Screen Illustrations</h2>
                   <p class="products-list-desc">Design</p>
@@ -157,13 +202,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card6.jpg"
-                  alt="online courses"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card6.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Online Courses</h2>
                   <p class="products-list-desc">Marketing</p>
@@ -171,13 +225,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card7.jpg"
-                  alt="instagram desing"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card7.jpg"
+                    alt="instagram desing"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Instagram Stories Concept</h2>
                   <p class="products-list-desc">Design</p>
@@ -185,13 +248,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card8.jpg"
-                  alt="desing website food"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card8.jpg"
+                    alt="desing website food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Organic Food</h2>
                   <p class="products-list-desc">Web Site</p>
@@ -199,13 +271,22 @@
               </a>
             </li>
             <li class="products-list-item">
-              <a class="products-list-link link" href="">
-                <img
-                  src="./images/img-card9.jpg"
-                  alt="desing website coffe"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="products-list-link link">
+                <div class="products-list-box">
+                  <img
+                    src="./images/img-card9.jpg"
+                    alt="desing website coffe"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                      · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Fresh Coffee</h2>
                   <p class="products-list-desc">Web Site</p>
@@ -219,13 +300,48 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="link logo footer-logo" href="./index.html"
-          >Web<span class="accent-logo-footer">Studio</span></a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-wrapper">
+          <a class="link logo footer-logo" href="./index.html"
+            >Web<span class="accent-logo-footer">Studio</span></a
+          >
+          <p class="footer-desc">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-wrapper">
+          <p class="social-media-desc">Social media</p>
+          <ul class="list team-socials-list-footer">
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
